<resources>
    <string name="app_name">tarea1corte2JA</string>
    <string name="txt_tarea">TALLER NRO 1 CORTE 2</string>
    <string name="txt_punto1">Punto 1</string>
    <string name="txt_x1">X1</string>
    <string name="txt_y1">Y1</string>
    <string name="txt_punto2">Punto 2</string>
    <string name="txt_x2">X2</string>
    <string name="txt_y2">Y2</string>
    <string name="txt_btnPendiente">Calcular pendiente</string>
    <string name="txt_btnPuntoMedio">Calcular punto medio</string>
    <string name="txt_btnEcuacion">Ecuación de la Recta</string>
    <string name="txt_btnCuadrantes">Cuadrantes</string>
    <string name="item_aleatorio">Aleatorio</string>
    <string name="item_cambioSigno">Cambio de signo</string>
    <string name="itemlayout_cuadrante1">Generar Puntos Primer Cuadrante</string>
    <string name="itemlayout_cuadrante2">Generar Puntos Segundo Cuadrante</string>
    <string name="itemlayout_cuadrante3">Generar Puntos Tercer Cuadrante</string>
    <string name="itemlayout_cuadrante4">Generar Puntos Cuarto Cuadrante</string>
</resources>